S06-Promote_API_from_Private_to_Public_Istio/internal/gateway-virtualservice-internal.yaml
#Copyright (c)  WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# WSO2 Inc. licenses this file to you under the Apache License,
# Version 2.0 (the "License"); you may not use this file except
# in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: wso2-gateway-internal
  namespace: micro
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key
    hosts:
      - "internal.wso2.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wso2-gateway-vs
  namespace: micro
spec:
  hosts:
  - "internal.wso2.com"
  gateways:
  - wso2-gateway-internal
  http:
   - route:
     - destination:
        host: online-store-api
        port:
          number: 9090
     corsPolicy:
       allowOrigin:
         - '*'
       allowMethods:
         - POST
         - GET
         - PUT
         - DELETE
       allowCredentials: false
       allowHeaders:
         - authorization
         - Access-Control-Allow-Origin
         - Content-Type
         - SOAPAction
         - apikey
         - Authorization
